# test_new_CV

./: README.md  project_specs.json  pyproject.toml
input4MIPs_dataset_category/: 000_context.jsonld  aerosolproperties.json  atmosphericstate.json  emissions.json  ghgconcentrations.json  landstate.json  ozone.json  radiation.json  solar.json  sstsandseaice.json  surfaceair.json  surfacefluxes.json
input4MIPs_input4MIPs_realm/: id='aerosol' type='realm'.json
input4MIPs_input4MIPs_variable_id/: snicefreezis.json  sw17o.json  ta8.json  taslut.json  tasmaxcrop.json  treefrac.json  treefracbdldcd.json  treefracbdlevg.json  treefracndlevg.json  tslsilut.json  tsnis.json  vegfrac.json  vegheight.json  vegheightcrop.json  vegheighttree.json  wetlandfrac.json  zg19.json  zg8.json
input4MIPs_mip_era/: cmip5.json  cmip6.json  cmip6plus.json
input4MIPs_source_id/: 000_context.jsonld  ceds-cmip-2024-07-08-supplemental.json  ceds-cmip-2024-07-08.json  ceds-cmip-2024-10-21-supplemental.json  ceds-cmip-2024-10-21.json  ceds-cmip-2024-11-25-supplemental.json  ceds-cmip-2024-11-25.json  ceds-cmip-2025-03-18-supplemental.json  ceds-cmip-2025-03-18.json  cr-cmip-0-2-0.json  cr-cmip-0-3-0.json  cr-cmip-0-4-0.json  cr-cmip-1-0-0.json  dres-cmip-bb4cmip7-1-0.json  dres-cmip-bb4cmip7-2-0.json  mri-jra55-do-1-6-0.json  pcmdi-amip-1-1-9.json  pcmdi-amip-ersst5-1-0.json  pcmdi-amip-had1p1-1-0.json  pcmdi-amip-oi2p1-1-0.json  solaris-heppa-cmip-4-1.json  solaris-heppa-cmip-4-2.json  solaris-heppa-cmip-4-3.json  solaris-heppa-cmip-4-4.json  solaris-heppa-cmip-4-5.json  ucla-1-0-1.json  (+18 more)
(+71 files in other folders)
