[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "test-new-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "esgvoc>=0.4.0",
    "requests>=2.32.3",
]
[tool.setuptools]
packages = ["scripts"]
